--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-transform-catch-errors": "^0.1.1",
     "react-transform-webpack-hmr": "^0.1.2",
     "redbox-react": "^1.0.1",
+    "ts-loader": "^0.5.3",
+    "typescript": "^1.6.0-beta",
     "webpack": "^1.9.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
